add: Ajuste do css da primeira pagina

--- a/Index.html
+++ b/Index.html
@@ -4,31 +4,53 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>PizzaDev</title>
+  <link rel="stylesheet" href="style.css">
+  <title>PizzaDev1</title>
 </head>
 <body>
 
-  <header>
-    <h1>PizzaDev</h1>
-    <h1>...</h1>
+  <header id="header">
+  <nav class="container">
+  <a class="logo" href="#"><h1>Pizza Dev.</h1></a>
+    <div><h1>...</h1></div>
+  </nav>
   </header>
+
+
+
   <main>
+  
+    
     <!-- Pagina 1 -->
     <section>
-      <img src="https://images.unsplash.com/photo-1513104890138-7c749659a591?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80" alt="Uma pizza">
-      <h1>Venha conhecer a melhor pizza da cidade</h1>
-      <p>Temos pizza de varios sabores</p>
-      <a href="#">Coneça nosso cardapio</a>
+      <div class="container">
+        <img src="https://images.unsplash.com/photo-1513104890138-7c749659a591?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80" alt="Uma pizza">
+        <h1>Venha conhecer a melhor pizza da cidade</h1>
+        <p>Temos pizza de varios sabores</p>
+        <a href="#">Conheça nosso cardapio</a>
+      </div>
     </section>
 
     <!-- Pagina 2 -->
-    <section></section>
+    <section>
+      <div class="container">
+
+      </div>
+    </section>
 
     <!-- Pagina 3 -->
-    <section></section>
+    <section>
+      <div class="container">
+
+      </div>
+    </section>
 
     <!-- Pagina 4 -->
-    <section></section>
+    <section>
+      <div class="container">
+
+      </div>
+    </section>
     
   </main>
 
