--- a/Index.html
+++ b/Index.html
@@ -5,6 +5,10 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&family=Poppins:wght@400;500;700&display=swap" rel="stylesheet">
+
   <title>PizzaDev1</title>
 </head>
 <body>
@@ -25,9 +29,10 @@
     <section>
       <div class="container">
         <img src="https://images.unsplash.com/photo-1513104890138-7c749659a591?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80" alt="Uma pizza">
+
         <h1>Venha conhecer a melhor pizza da cidade</h1>
         <p>Temos pizza de varios sabores</p>
-        <a href="#">Conheça nosso cardapio</a>
+        <a href="http://www.reisdapizza.com.br/cardapio.html">Conheça nosso cardapio</a>
       </div>
     </section>
 
