--- a/Index.html
+++ b/Index.html
@@ -36,14 +36,14 @@
       <div class="texto">
         <h1>Venha conhecer a melhor pizza da cidade</h1>
         <p>Temos pizza de varios sabores</p>
-        <a href="http://www.reisdapizza.com.br/cardapio.html">Conheça nosso cardapio</a>
+        <a href="http://www.reisdapizza.com.br/cardapio.html" class="button">Conheça nosso cardapio</a>
       </div>
       </div>
     </section>
 
     <!-- Pagina 2 -->
     <section>
-      <div class="container">
+      <div class="container grid">
 
       </div>
     </section>
@@ -72,3 +72,17 @@
 
 </body>
 </html>
+<!-- Pagina 5 -->
+<section class="dev1">
+  <div class="container grid">
+
+    <div class="imagem1">
+    <img src="https://acadtec.com.br/storage/posts/pictures/ntVKoNURQUQhP9ghaf06607dcbf590338.jpg" alt="Uma pizza">
+  </div>
+  <div class="texto1">
+    <h1>Guilherme Dias Garcia</h1>
+    <p>Prazer eu sou Guilherme o desenvolvedor desse site espero que goste e que seja muito informativo</p>
+    <a href="https://pt-br.facebook.com/people/Guilherme-Dias-Garcia/100006161235142/"class="button">Meu Contato</a>
+  </div>
+  </div>
+</section>
