--- a/Index.html
+++ b/Index.html
@@ -9,6 +9,9 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&family=Poppins:wght@400;500;700&display=swap" rel="stylesheet">
 
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&family=Dancing+Script&family=Poppins:wght@400;500;700&display=swap" rel="stylesheet">
   <title>PizzaDev1</title>
 </head>
 <body>
@@ -79,9 +82,10 @@
     <div class="imagem1">
     <img src="https://acadtec.com.br/storage/posts/pictures/ntVKoNURQUQhP9ghaf06607dcbf590338.jpg" alt="Uma pizza">
   </div>
-  <div class="texto1">
-    <h1>Guilherme Dias Garcia</h1>
-    <p>Prazer eu sou Guilherme o desenvolvedor desse site espero que goste e que seja muito informativo</p>
+  <div class="texto">
+    <a class="nome" href="#"><h1>Guilherme<span> Dias Garcia</span></h1></a>
+    <p>Prazer eu sou Guilherme o desenvolvedor desse site espero que goste e que seja muito informativo para nossos usuarios</p>
+    <p> a tag "nav" serve para definir um menu e organizar o site a tag "p" serve para escrever algun texto dentro dela e a tag "a" serve para colocar um link e "span" estilizar diferentemente uma parte do texto que pode ser para mudar a cor e diversas outras propriedades como família de fonte, tamanho, peso</p>
     <a href="https://pt-br.facebook.com/people/Guilherme-Dias-Garcia/100006161235142/"class="button">Meu Contato</a>
   </div>
   </div>
