--- a/Index.html
+++ b/Index.html
@@ -17,14 +17,14 @@
 <body>
 
   <header id="header">
-  <nav class="container">
+  <nav class="container show">
     
   <a class="logo" href="#"><h1>Pizza <span>Dev.</span></h1></a>
-    <div class="menu"><ul>
-      <li><a href="#home">Inicio</a></li>
-      <li><a href="#about">Sobre</a></li>
-      <li><a href="#services">Serviços</a></li>
-      <li><a href="#contacts">contatos</a></li>
+    <div class="menu"><ul class="grid">
+      <li><a href="#home" class="title">Inicio</a></li>
+      <li><a href="#about"class="title">Sobre</a></li>
+      <li><a href="#services"class="title">Serviços</a></li>
+      <li><a href="#contacts"class="title">contatos</a></li>
       </ul>
       <div>
         <div class="open"></div>
@@ -47,7 +47,7 @@
         <img src="https://images.unsplash.com/photo-1513104890138-7c749659a591?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80" alt="Uma pizza">
       </div>
       <div class="texto">
-        <h1>Venha conhecer a melhor pizza da cidade</h1>
+        <h1 class="title">Venha conhecer a melhor pizza da cidade</h1>
         <p>Temos pizza de varios sabores</p>
         <a href="http://www.reisdapizza.com.br/cardapio.html" class="button">Conheça nosso cardapio</a>
       </div>
