--- a/Index.html
+++ b/Index.html
@@ -12,23 +12,26 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&family=Dancing+Script&family=Poppins:wght@400;500;700&display=swap" rel="stylesheet">
+
+  <link href="assets/style.css" rel="stylesheet"/>
   <title>PizzaDev1</title>
 </head>
 <body>
 
   <header id="header">
-  <nav class="container show">
-    
+  <nav class="container">
+   
   <a class="logo" href="#"><h1>Pizza <span>Dev.</span></h1></a>
     <div class="menu"><ul class="grid">
       <li><a href="#home" class="title">Inicio</a></li>
       <li><a href="#about"class="title">Sobre</a></li>
       <li><a href="#services"class="title">Serviços</a></li>
       <li><a href="#contacts"class="title">contatos</a></li>
+
       </ul>
-      <div>
-        <div class="open"></div>
-        <div class="close"></div>
+    </div>
+        <div class="toggle icon-menu"></div>
+        <div class="toggle icon-close"></div>
   </nav>
 
   </header>
@@ -81,7 +84,7 @@
   <footer>
 
   </footer>
-
+  <script src="main.js"></script>
 
 
 </body>
